# pine-engine-v2

./: .gitignore  .gitignore.bak  .gitmodules  CMakeLists.txt  Pine.sln  README.md  TODO.md
Demo/: Demo.cpp  (+2 more)
Editor/: Application.cpp  CMakeLists.txt  Editor.cpp  Editor.vcxproj  Editor.vcxproj.filters  imgui.ini
Editor/Assets/: blueprint.bpt
Editor/Assets/Editor/Icons/: LICENSE.txt
Editor/Assets/Editor/Shaders/ColliderBox/: Fragment.glsl  Vertex.glsl
Editor/Assets/Editor/Shaders/ObjectOutline/: Fragment.glsl
Editor/Assets/Engine/Icons/: ICONS.txt
Editor/Assets/Engine/Primitive Shapes/: cube.fbx
Editor/Assets/Engine/Shaders/: Default.shr  PostProcessing.shr  Skybox.shr
Editor/Assets/Engine/Shaders/2D/: Rect.shr  Rect.shr.bak
Editor/Assets/Engine/Shaders/Default/: Fragment.c  Fragment.glsl  Fragment.glsl.bak  Vertex.c  Vertex.glsl
Editor/Assets/Engine/Shaders/PostProcessing/: Fragment.glsl  Fragment.txt  Vertex.glsl  Vertex.txt
Editor/Assets/Engine/Shaders/Skybox/: Fragment.glsl  Vertex.glsl
Editor/Assets/Engine/Shaders/Terrain/: Fragment.glsl  Vertex.glsl
Editor/Assets/Engine/Skyboxes/: DefaultSkybox.cmap  Space.cmap
Editor/Engine/Shaders/: Default.shr
Editor/Engine/Shaders/Default/: Vertex.c
Editor/Gui/: Gui.cpp  Gui.hpp
Editor/Gui/AssetRenderer/: AssetRenderer.cpp  AssetRenderer.hpp
Editor/Gui/ComponentRenderer/: ComponentRenderer.cpp  ComponentRenderer.hpp
Editor/Gui/Widgets/: Widgets.cpp  Widgets.hpp
Editor/Gui/Windows/AssetBrowser/: AssetBrowser.cpp  AssetBrowser.hpp
Editor/Gui/Windows/Console/: Console.cpp  Console.hpp
Editor/Gui/Windows/EntityList/: Entitylist.cpp  Entitylist.hpp
Editor/Gui/Windows/Profiler/: Profiler.cpp  Profiler.hpp
Editor/Gui/Windows/Properties/: Properties.cpp  Properties.hpp
Editor/Gui/Windows/Viewport/: Viewport.cpp  Viewport.hpp
Editor/Projects/Default/: Cube.mat  Cube.obj.asset  Grass.mat  Main.lvl  MainLevel.lvl  PlayerController.as  Test.lvl  TestScript.as  blah.mat  campfire.mtl  campfire.obj.asset  campfire_fbx.fbx  campfire_stone.mat  campfire_wood.mat  cbdf.lvl  cube.fbx.asset  cube.mat  dfgdsfs.lvl  dragon.mat  dragon.obj.asset  modelTest.lvl  physicsTest.lvl  physicsTestScene.lvl  rgbExperiment.lvl  test.lvl  test.mat
Editor/Projects/Default/Materials/: floor.mat  ground.mat
Editor/Projects/Default/Night Skybox/: NightSkybox.cmap
Editor/Utils/AssetPreviewGenerator/: AssetPreviewGenerator.cpp  AssetPreviewGenerator.hpp
Editor/Utils/DirectoryCache/: DirectoryCache.cpp  DirectoryCache.hpp
Editor/Utils/PreviewManager/: PreviewManager.cpp  PreviewManager.hpp
Editor/src/: Application.cpp
Editor/src/Editor/: Editor.cpp  Editor.hpp
Editor/src/Editor/EditorEntity/: EditorEntity.cpp  EditorEntity.hpp
Editor/src/Editor/Gui/: Gui.cpp  Gui.hpp
Editor/src/Editor/Gui/MainMenuBar/: MainMenuBar.cpp  MainMenuBar.hpp
Editor/src/Editor/Gui/Widgets/: Widgets.cpp  Widgets.hpp
Editor/src/Editor/Gui/Windows/: AssetBrowser.cpp  Console.cpp  DebugWindows.cpp  Entitylist.cpp  LevelSettings.cpp  Profiler.cpp  ProjectWizard.cpp  Properties.cpp  Settings.cpp  Viewports.cpp  Windows.hpp
Editor/src/Editor/PlayManager/: PlayManager.cpp  PlayManager.hpp
Editor/src/Editor/ProjectManager/: ProjectManager.cpp  ProjectManager.hpp
Editor/src/Editor/RenderingHandler/: RenderingHandler.cpp  RenderingHandler.hpp
Editor/src/Editor/RuntimeManager/: RuntimeManager.cpp  RuntimeManager.hpp
Editor/src/ImGuizmo/: ImGuizmo.cpp
GameHost/: CMakeLists.txt
GameHost/src/: Application.cpp
GameRuntime/: CMakeLists.txt  GameRuntime.vcxproj  GameRuntime.vcxproj.filters  dllmain.cpp
GameRuntime/src/: DllMain.cpp
GameRuntime/src/Controllers/GameController/: GameController.cpp  GameController.hpp  WorldController.cpp  WorldController.hpp
GameRuntime/src/Controllers/InstancedRenderingTest/: InstancedRenderingTest.cpp  InstancedRenderingTest.hpp
GameRuntime/src/Controllers/MainMenuController/: MainMenuController.cpp  MainMenuController.hpp
GameRuntime/src/Controllers/PlayerController/: PlayerController.cpp  PlayerController.hpp
GameRuntime/src/Controllers/RGBExperiment/: RGBExperiment.cpp  RGBExperiment.hpp
Pine/: CMakeLists.txt  Pine.vcxproj  Pine.vcxproj.filters
Pine/src/ImGui/: imconfig.h  imgui_impl_opengl3.cpp  imgui_widgets.cpp
Pine/src/Pine/: Pine.cpp  Pine.hpp
Pine/src/Pine/Assets/: Assets.cpp  Assets.hpp
Pine/src/Pine/Assets/Blueprint/: Blueprint.cpp  Blueprint.hpp
Pine/src/Pine/Assets/IAsset/: IAsset.cpp  IAsset.hpp
Pine/src/Pine/Assets/Invalid/: InvalidAsset.cpp  InvalidAsset.hpp
Pine/src/Pine/Assets/Level/: Level.cpp  Level.hpp
Pine/src/Pine/Assets/Material/: Material.cpp  Material.hpp
Pine/src/Pine/Assets/Mesh/: Mesh.cpp  Mesh.hpp
Pine/src/Pine/Assets/Model/: Model.cpp  Model.hpp
Pine/src/Pine/Assets/Script/: Script.cpp  Script.hpp
Pine/src/Pine/Assets/Shader/: Shader.cpp  Shader.hpp
Pine/src/Pine/Assets/Terrain/: Terrain.cpp  Terrain.hpp
Pine/src/Pine/Assets/Texture/: Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp
Pine/src/Pine/Assets/Texture2D/: Texture2D.cpp  Texture2D.hpp
Pine/src/Pine/Assets/Texture3D/: Texture3D.cpp  Texture3D.hpp
Pine/src/Pine/Components/: Components.cpp  Components.hpp
Pine/src/Pine/Components/Behavior/: Behavior.cpp  Behavior.hpp
Pine/src/Pine/Components/Camera/: Camera.cpp  Camera.hpp
Pine/src/Pine/Components/Collider/: Collider.cpp  Collider.hpp
Pine/src/Pine/Core/: Core.hpp
Pine/src/Pine/Entity/: Entity.cpp  Entity.hpp
Pine/src/Pine/Entitylist/: EntityList.cpp  EntityList.hpp
Pine/src/Pine/GameManager/: GameManager.cpp  GameManager.hpp
Pine/src/Pine/Gui/: Gui.cpp  Gui.hpp
Pine/src/Pine/Input/: Input.cpp  Input.hpp
Pine/src/Pine/PhysicsManager/: PhysicsManager.cpp  PhysicsManager.hpp
Pine/src/Pine/RenderManager/: RenderManager.cpp  RenderManager.hpp
Pine/src/Pine/Renderer3D/: Renderer3D.cpp  Renderer3D.hpp
Pine/src/Pine/RuntimeLoader/: RuntimeLoader.cpp  RuntimeLoader.hpp
Pine/src/Pine/ScriptManager/: ScriptManager.cpp  ScriptManager.hpp
Pine/src/Pine/UniformBuffers/: UniformBuffers.hpp
(+121 files in other folders)
